records-style.css
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:wght@300;500;700&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    height: 100vh; /*para que ocupe toda la pantalla y no haya espacios en blanco*/
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: repeat(4,auto);
    grid-template-areas: 
     "cabecera cabecera cabecera cabecera"
     "principal principal principal principal"
     "principal principal principal principal"
     "piepag piepag piepag piepag"
    ;
}

.records--header{
    width: 100%;
    height: auto;
    background-color: #FF3F3E;
    color: white;
    display: flex;
    padding: 30px 0px;
    justify-content: center;
    column-gap: 25px;
    grid-area: cabecera;
}

.records--header h1{
    font-family: 'Permanent Marker', cursive;
    -webkit-text-stroke: 1px black;
    font-size: 50px;
    align-self: center;
}

.fa-address-card{
    font-size: 60px;
    align-self: center;
    -webkit-text-stroke: 2px black;
}

main{
    width: 100%;
    height: auto;
    padding: 80px 0 70px 0;
    background-color: #FEB34D;
    grid-area: principal;
}

.records--card{
    width: 600px;
    height: auto;
    margin: 0 auto;
    background-color: white;
    border-radius: 15px;
    display: flex;
    position: relative;
}

.layer1{
    width: 98%;
    margin: 6px auto;
    background-color: #A8BBEC;
    border-radius: 9px;
    display: flex;
}

.layer2{
    width: 98%;
    margin: 6px auto;
    background-color: #0085F8;
    border-radius: 6px;
}

.records--main__up h2{
    width: 450px;
    font-size: 40px;
    margin: 0px auto;
    color: white;
    -webkit-text-stroke: 1px black;
    text-shadow: 0px 1px 4px black;
    background-color: #FF753B;
    padding: 20px 40px;
    border-radius: 40px;
    text-align: center;
    font-family: 'Permanent Marker', cursive;
    position: absolute;
    left: calc(50% - 225px);
    top: calc(0% - 30px);
    box-shadow: 0px 7px 2px 2px #3C5EFE;
}

.records--main__down{
    width: 300px;
    margin: 0px auto;
    font-size: 40px;
    background-color: #3B4664;
    padding: 20px;
    border-radius: 40px;
    display: flex;
    justify-content: space-between;
    text-align: center;
    position: absolute;
    left: calc(50% - 150px);
    top: calc(100% - 64px);
}
.icons--down{
    color: #E8EFFF;
    -webkit-text-stroke: 2px black;
}

.botton--green{
    width: 70px;
    padding: 5px;
    background-color: #04C852;
    border-radius: 25px;
    border: 6px solid #F7FBFE;
}

.records--main__list{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: repeat(3,auto);
    grid-template-areas: 
        " icon--plus--one .  icon--plus--two"
        " player player player"
        " icon--plus--three .  icon--plus--four"
     ;
     padding: 30px 15px;
}

.plus1--circle{
    grid-area: icon--plus--one;

}

.plus2--circle{
    grid-area: icon--plus--two;
    justify-self: end;
}

.plus3--circle{
    grid-area: icon--plus--three;
}

.plus4--circle{
    grid-area: icon--plus--four;
    justify-self: end;

}

.circle--container{
    width: 35px;
    height: 35px;
    background-color: #3A4666;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.players--container{
    grid-area: player;
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: auto;
    padding: 15px 5px;
    row-gap: 10px;
}

.fa-circle-plus{
    font-size: 25px;
    color: #EBEEFD;
}

.player--record{
    background-color: #F7FBFC;
    padding: 5px;
    border-radius: 10px;
    box-shadow: -4px 5px 2px 2px #0056C3;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: auto;
    column-gap: 8px;
    font-family: 'Permanent Marker', cursive;
    color: #E7EFFF;
}

.player--record__name, .player--record__time{
    background-color: #A9BCE7;
    padding: 7px;
    border-radius: 5px;
    display: flex;
    column-gap: 10px;
    align-items: center;
}

.player--record__number{
    width: 50px;
    height: 50px;
    background-color: #FF3F3E;
    border: 4px solid #FCFAFE;
    text-align: center;
    font-size: 30px;
    -webkit-text-stroke: 2px black;
    border-radius: 15px;
    text-shadow: 0px 5px 1px #BC1E63;
    box-shadow: 0px 2px 1px 1px #BD195A;

}

.player--record__signature, .player--record__record{
    font-size: 30px;
    -webkit-text-stroke: 2px black;
    text-shadow: 0px 5px 1px #6B90BD;
}

.fa-clock{
    font-size: 30px;
}

.player--record{
    column-gap: 5px;
}

.player--record__icon{
    width: 50px;
}

.player--record__time{
    justify-content: space-around;
}

/*Footer*/

.records--footer{
    width: 100%;
    height: auto;
    background-color: #FF3F3E;
    grid-area: piepag;
    display: flex;

}

.welcome--contact{
    margin: 0 auto;
    width: 100%;
    font-size: 18px;
    display: grid;
    grid-template-columns: repeat(2,minmax(300px, 1fr));
    /*text-shadow: 0px 0px 10px #F8F7FC;*/
    padding: 20px 40px;
    /*border: 1px solid #F8F7FC;*/
    /*box-shadow: 0px 0px 20px 10px #F8F7FC;*/
    border-radius: 10px;
}

.contact--logo{
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    padding-right: 55px;
}

.contact--logo img{
    display: flex;
    justify-content: center;
    box-shadow: 0px 0px 4px 5px #F8F7FC;
}

.contact--media{
    display: grid;
    grid-template-columns: repeat(5,1fr);
    grid-template-areas: 
    "title title title title title"
    "git tik ytb insta faceb"
    ;
    row-gap: 15px;
}

.contact--media p{
    grid-area: title;
}

.fa-github{
    grid-area: git;
}

.fa-tiktok{
    grid-area: tik;
}

.fa-youtube{
    grid-area: ytb;
}

.fa-instagram{
    grid-area: insta;
}

.fa-square-facebook{
    grid-area: faceb;
}

.social-icons{
    color: #F8F7FC;
    /*text-shadow: 0px 0px 10px #F8F7FC;*/
    font-size: 35px;
}

.contact--logo--copyright, .contact--media--text{
    font-family: 'Permanent Marker', cursive;
    color: #F8F7FC;
    font-size: 20px;

}

/* Ventana de registro*/

.register--card{
    position: absolute;
    width: 400px;
    height: auto;
    background-color: #53277C;
    top: 40%;
    border-radius: 5px;
    font-family: 'Permanent Marker', cursive;
    left: calc(50%  - 200px);
    box-shadow: 0px 2px 60px 100px #1E0E35;
}

.register--card__layer1{
    width: 90%;
    margin: 20px auto;
    border-radius: 5px;
    background-color: #C059FE;
    padding: 15px;
}

.register--card__layer1 form{
    display: flex;
    flex-direction: column;
    row-gap: 15px;
}

.register--card__layer1 label{
    font-size: 19px;
    color: white;
}

.register--card__layer1 form  input{
    font-family: 'Permanent Marker', cursive;
    margin: 0 auto;

}
.nickname--input{
    padding: 8px;
    height: 35px;
    width: 80%;
    border-radius: 5px;
    border: 0;
    outline-color: #0085F8;
    font-size: 20px;
}

.type2{
    cursor: pointer;
    width: 110px;
    font-size: 20px;
    background-color: #FEB34D;
    padding: 5px;
    border-radius: 25px;
    border: 5px solid #F7FBFE;
}

.type2:hover{
    background-color: #61B5B3;
}


@media screen and (max-width: 1020px){

    /*Cabecera*/

    .records--header{
        padding: 20px 0px;
    }
    
    .records--header h1{
        font-size: 40px;
    }
    
    .fa-address-card{
        font-size: 50px;
    }

    /*Footer*/

    .welcome--contact{
        width: 90%;
        grid-template-columns: repeat(auto-fit,minmax(320px, 1fr));
        padding: 20px 20px;
        row-gap: 20px;
    }

    .contact--logo{
        grid-template-columns: 2fr 1fr;
        column-gap: 10px;
        padding-right: 0;
    }

}

@media screen and (max-width: 600px){

    /*Cabecera*/

    .records--header{
        padding: 30px 20px 40px;
        flex-direction: column;
        row-gap: 10px;
    }

    .records--header h1{
        text-align: center;
        line-height: 45px;
    }
    
    .fa-address-card{
        font-size: 40px;
    }

    /*Main*/
    
    .records--card{
        width: 350px;
    }

    .records--main__up h2{
        width: 250px;
        font-size: 30px;
        padding: 10px 30px;
        left: calc(50% - 125px);
        top: calc(0% - 50px);
    }
    
    .records--main__down{
        width: 230px;
        font-size: 30px;
        border-radius: 30px;
        left: calc(50% - 115px);
    }

    .botton--green{
        width: 60px;
        border: 4px solid #F7FBFE;
    }

    .player--record__signature, .player--record__record{
        font-size: 25px;
        -webkit-text-stroke: 1.5px black;
    }

    .player--record__name, .player--record__time{
        padding: 4px;
    }

    .player--record__icon{
        width: 30px;
    }

    .records--main__list{
         padding: 30px 10px;
    }

    .player--record__number{
        width: 40px;
        font-size: 25px;
        height: 40px;
        border: 3px solid #FCFAFE;
        -webkit-text-stroke: 1.5px black;
        border-radius: 10px;
    }

    /*Footer*/

    .welcome--contact{
        font-size: 15px;
        padding: 50px 15px;
        row-gap: 40px;
    }

    .social-icons{
        font-size: 25px;
    }

   
    .contact--media p{
        align-self: center;
    }

    .contact--logo{
        grid-template-columns: 3fr 1fr;
    }

    .register--card{
        width: 320px;
        left:calc(50%  - 160px);
        box-shadow: 0px 2px 60px 80px #1E0E35;
    }
    .register--card__layer1 label{
        font-size: 17px;

    }
    .nickname--input{
        width: 85%;
        font-size: 16px;
    }
    
    .type2{
        font-size: 16px;
    }
}


.inactive{
    display: none;
}

